--- a/public/css/test.css
+++ b/public/css/test.css
@@ -1,9 +1,19 @@
-@media (max-width: 650px) {
+@media (max-width: 900px) {
+  #main-header {
+    order: 1;
+    height: 100px;
+    flex: 0 1 100%;
+    margin-bottom: 75px;
+  }
+
   .bar {
     flex-wrap: wrap;
   }
-  .icon {
+  .icon-header {
     order: 0 !important;
+    padding: 1px 5px 1px 5px;
+    margin: 2px;
+    width: 48%;
   }
   .username {
     order: 1 !important;
@@ -17,6 +27,7 @@
 }
 
 body {
+  background-color: #323D2E;
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
   margin: 0;
@@ -27,7 +38,8 @@ body {
 }
 a {
   text-decoration: none;
-  color: black;
+  color: white;
+  letter-spacing: 1px;
 }
 .bar {
   display: flex;
@@ -35,19 +47,31 @@ a {
   align-items: center;
   justify-content: space-around;
   width: 100%;
-  background: #eee;
+  background: #92AF8F;
   padding: 10px;
+  text-align: center;
+}
+.icon-header {
+  padding: 5px 35px 5px 35px;
+  /*border: 3px solid black;*/
+  background-color: #006341;
+}
+
+.icon-footer {
+  width: 48%;
+  padding: 5px 35px 5px 35px;
+  /*border: 3px solid black;*/
+  background-color: #006341;
 }
 .search {
   width: 300px;
-  background: yellow;
 }
 .search input {
   display: block;
   margin: 0;
   padding: 0 4px;
   width: 100%;
-  height: 30px;
+  height: 35px;
   color: #6d6d6d;
   background-color: #fff;
   border: solid 2px #e7e7e7;
@@ -58,15 +82,15 @@ a {
 }
 
 .main_section {
-  background: #CCC;
-  border-radius: 7px;
-  margin: 5px;
-  padding: 5px;
+  /*background: #CCC;*/
+  /*border-radius: 7px;*/
+  /*margin: 5px;*/
+  /*padding: 5px;*/
 }
 
 #main-header {
   order: 1;
-  /*height: 60px;*/
+  height: 60px;
   flex: 0 1 100%;
 }
 
@@ -93,6 +117,7 @@ a {
   display: flex;
   flex-flow: column;
   flex: 0 1 80%;
+
 }
 
 #orders-list {
